src/objects/Quote_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Academic_Start_Date_Term_1__c</fullName>
        <description>Academic Start Date Term 1</description>
        <label>Academic Start Date Term 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Start_Date_Term_2__c</fullName>
        <description>Academic Start Date Term 2</description>
        <label>Academic Start Date Term 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Start_Date_Term_3__c</fullName>
        <description>Academic Start Date Term 3</description>
        <label>Academic Start Date Term 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_Rate__c</fullName>
        <description>Administration Fee Rate that will be used on Repayment calculation</description>
        <label>Administration Fee Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Registration_Fee_New_Business__c</fullName>
        <description>Default Registration Fee (New Business)</description>
        <label>Default Registration Fee (New Business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Registration_Fee_ReturnBusiness__c</fullName>
        <description>Default Registration Fee (Returning Business)</description>
        <label>Default Registration Fee(ReturnBusiness)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Price_List_Id__c</fullName>
        <label>Early Bird Price List Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Bird__c</fullName>
        <description>Early Bird date</description>
        <label>Early Bird</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earlybird_Securing_Fee_New_Business__c</fullName>
        <description>Earlybird/Securing Fee (New Business)</description>
        <label>Earlybird/Securing Fee(New Business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earlybird_Securing_Fee_Return_Business__c</fullName>
        <description>Earlybird/Securing Fee (Returning Business)</description>
        <label>Earlybird/Securing Fee (Return Business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Early_Bird_Price_List_Id__c</fullName>
        <label>Non Early Bird Price List Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CTI MGI Quote Setting</label>
</CustomObject>